    * Russian localization of help by DmDr
    * Fix for bug #1096622: Damaged image in the help, by Parin Porecha
    * Fix for bug #1095390: Quick Add bar incorrectly parses tags, by Parin Porecha
    * Fix for bug #1079143: Adding the same custom color in tag editor multiple times raises an Exception, by Parin Porecha

2012-11-06 Getting Things GNOME! 0.3
    * Hide tasks with due date someday, #931376
    * New Date class by Paul Kishimoto and Izidor Matušov
      * Parse due:3 as next 3rd day in month
    * Urgency Color plugin by Wolter Hellmund
    * Allow GTG to run from different locations than /usr/share or /usr/local/share
    * Removed module GTG.tools.openurl and replaced by python's webbrowser.open
    * Removed import_json plugin
    * Saved searches could have assigned color
    * Stopped links from opening when accidently letting go of mouse button while selecting them, #823339, by Steve Scheel
    * Search through DBus
    * GTCli handles error better
    * GTCli allows search through DBus
    * Small change to QuickAdd toolbar:
      * there is allowed whitespace after due: and others, i.e. "due: 2012-04-01" is parsed as a valid attribute
      * added start: which has the same meaning as defer:
    * Automatic restore a backup XML file if the original XML file could not be loaded
    * Backends were renamed to Synchronization Services, by Anant Gupta
    * Reimplement the tag context menu as a widget, in order to - hopefully - be able to implement an enhanced context menu with, for instance, a color picker.
    * Background Colors option was moved from View menu into preferences dialog
    * Reorganised notification area menu (New task, Show browser, <tasks>, Quit)
    * Added an option to import local (development) version of liblarch instead of system installed one
    * Fix for bug #995740: (no title task) through quickadd bar, by Nimit Shah
    * New tag editor